force-app/main/default/objects/Menu_Item__c/fields/Allergen_Tags__c.field-meta.xml
<CustomField>
    <fullName>Allergen_Tags__c</fullName>
    <label>Allergen Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Dairy</fullName><default>false</default><label>Dairy</label></value>
            <value><fullName>Gluten</fullName><default>false</default><label>Gluten</label></value>
            <value><fullName>Nuts</fullName><default>false</default><label>Nuts</label></value>
            <value><fullName>Shellfish</fullName><default>false</default><label>Shellfish</label></value>
            <value><fullName>Eggs</fullName><default>false</default><label>Eggs</label></value>
            <value><fullName>Soy</fullName><default>false</default><label>Soy</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>