force-app/main/default/objects/Menu_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Starter</fullName><default>false</default><label>Starter</label></value>
            <value><fullName>Main</fullName><default>true</default><label>Main</label></value>
            <value><fullName>Dessert</fullName><default>false</default><label>Dessert</label></value>
            <value><fullName>Drink</fullName><default>false</default><label>Drink</label></value>
            <value><fullName>Side</fullName><default>false</default><label>Side</label></value>
            <value><fullName>Kids</fullName><default>false</default><label>Kids</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>