force-app/main/default/objects/Menu_Item__c/fields/Is_Chef_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Is_Chef_Recommendation__c</fullName>
    <label>Chef Recommendation</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>