force-app/main/default/objects/Menu_Item__c/fields/Last_Inventory_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Inventory_Check__c</fullName>
    <label>Last Inventory Check</label>
    <type>DateTime</type>
    <description>When item availability was last verified. Stale checks (> 24 hrs) reduce agent confidence in availability claims.</description>
</CustomField>